# conntest

./: .gitignore  BUILD  WORKSPACE  go.work.sum  sequence_1.png.url
docs/: bazel.md  go-workspace.md
lib/: service.go
servers/client/: BUILD.bazel  client.go  client_test.go  clientserver.go  go.mod
servers/server/: BUILD.bazel  go.mod  main.go  server.go  server_test.go  serverserver.go  services.go
servers/sim7600g/: BUILD.bazel  command.go  command_test.go  go.mod  go.sum  response.go  response_test.go  sim7600g.go  sim7600g_suite_test.go  sim7600g_test.go
servers/sim7600g/docs/: AT Command Tester.md  commands.md
services/: BUILD.bazel  go.mod  service.go
