load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "client_lib",
    srcs = [
        "client.go",
        "clientserver.go",
        "services.go",
    ],
    importpath = "kalidoluther.com/conntest/servers/client",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "client_test",
    srcs = ["client_test.go"],
    embed = [":client_lib"],
)
