load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "sim7600g_lib",
    srcs = [
        "command.go",
        "response.go",
        "sim7600g.go",
    ],
    importpath = "kalidoluther.com/conntest/servers/sim7600g",
    visibility = ["//visibility:private"],
    deps = ["@st_bug_go_serial//:serial"],
)

go_binary(
    name = "sim7600g",
    embed = [":sim7600g_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "sim7600g_test",
    srcs = [
        "command_test.go",
        "response_test.go",
        "sim7600g_suite_test.go",
        "sim7600g_test.go",
    ],
    embed = [":sim7600g_lib"],
    deps = [
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
